@@ -10,26 +10,27 @@ package de.uni_hamburg.corpora;
 
 import de.uni_hamburg.corpora.utilities.PrettyPrinter;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 import de.uni_hamburg.corpora.utilities.quest.XMLTools;
 import org.apache.commons.lang3.time.DurationFormatUtils;
-import org.jdom.Attribute;
-import org.jdom.Document;
-import org.jdom.Element;
-import org.jdom.input.SAXBuilder;
-import org.jdom.xpath.XPath;
+import org.jdom2.Attribute;
+import org.jdom2.Document;
+import org.jdom2.Element;
+import org.jdom2.filter.Filters;
+import org.jdom2.input.SAXBuilder;
+import org.jdom2.xpath.XPathBuilder;
+import org.jdom2.xpath.XPathFactory;
+import org.jdom2.xpath.jaxen.JaxenXPathFactory;
 import org.xml.sax.SAXException;
-import org.jdom.JDOMException;
+import org.jdom2.JDOMException;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.xml.parsers.ParserConfigurationException;
@@ -41,6 +42,10 @@ import org.apache.commons.io.FilenameUtils;
  * Provides access to basic transcriptions as a data type that can be read and
  * written HZSK corpus services. Naming might change, depending on what it ends
  * up being implemented as. It seems to me like a bridge now, or just aggregate.
+ *
+ * Last updated
+ * @author Herbert Lange
+ * @version 20240405
  */
 public class ELANData implements CorpusData, ContentData, XMLData {
 
@@ -50,6 +55,7 @@ public class ELANData implements CorpusData, ContentData, XMLData {
     URL parenturl;
     String filename;
     String filenamewithoutending;
+    private final XPathFactory xpathFactory = new JaxenXPathFactory();
 
     public ELANData() {
     }
@@ -59,7 +65,7 @@ public class ELANData implements CorpusData, ContentData, XMLData {
             this.url = url;
             SAXBuilder builder = new SAXBuilder();
             jdom = builder.build(url);
-            originalstring = new String(Files.readAllBytes(Paths.get(url.toURI())), StandardCharsets.UTF_8);
+            originalstring = Files.readString(Paths.get(url.toURI()));
             URI uri = url.toURI();
             URI parentURI = uri.getPath().endsWith("/") ? uri.resolve("..") : uri.resolve(".");
             parenturl = parentURI.toURL();
@@ -158,15 +164,14 @@ public class ELANData implements CorpusData, ContentData, XMLData {
             return new Location("unknown", "");
         String normalizedToken = token.replaceAll("\"", "'");
         Element tier =
-                (Element) XPath.newInstance(String.format("/ANNOTATION_DOCUMENT/TIER[contains(string(.),\"%s\")]",
-                                normalizedToken))
-                        .selectSingleNode(getJdom());
+                new XPathBuilder<>( String.format("/ANNOTATION_DOCUMENT/TIER[contains(string(.),\"%s\")]",
+                        normalizedToken), Filters.element()).compileWith(xpathFactory).evaluateFirst(getJdom());
         if (tier != null) {
             Attribute tier_id = tier.getAttribute("TIER_ID");
             assert tier_id != null : "Tier id is null";
             Element annotation_segment = null ;
-            for (Element e : (List<Element>) tier.getChildren()) {
-                for (Element ee : (List<Element>) e.getChildren()) {
+            for (Element e : tier.getChildren()) {
+                for (Element ee : e.getChildren()) {
                     if (XMLTools.showAllText(e).contains(normalizedToken)) {
                         annotation_segment = ee;
                         break;
@@ -175,35 +180,32 @@ public class ELANData implements CorpusData, ContentData, XMLData {
             }
             assert annotation_segment != null : "Annotation segment is null";
             String annotation_id = annotation_segment.getAttributeValue("ANNOTATION_ID");
-            if (annotation_segment.getName().equals("ALIGNABLE_ANNOTATION")) {
+            if (!annotation_segment.getName().equals("ALIGNABLE_ANNOTATION")) {
                 // do nothing
-            }
-            else if (annotation_segment.getName().equals("REF_ANNOTATION")) {
-                // Resolve reference first
-                annotation_segment = (Element) XPath.newInstance(
-                        String.format("//ALIGNABLE_ANNOTATION[@ANNOTATION_ID=\"%s\"]",
-                        annotation_segment.getAttributeValue("ANNOTATION_REF"))).selectSingleNode(tier);
-                assert annotation_segment != null : "Annotation segment is null after resolving reference";
-            }
-            else {
-                return new Location("Tier:" + tier_id.getValue() + "",
-                        "Segment:" + annotation_segment.getAttributeValue("ANNOTATION_ID=") + "");
+                if (annotation_segment.getName().equals("REF_ANNOTATION")) {
+                    // Resolve reference first
+                    annotation_segment =
+                            new XPathBuilder<>(String.format("//ALIGNABLE_ANNOTATION[@ANNOTATION_ID=\"%s\"]",
+                                    annotation_segment.getAttributeValue("ANNOTATION_REF")), Filters.element()).compileWith(xpathFactory).evaluateFirst(tier);
+                    assert annotation_segment != null : "Annotation segment is null after resolving reference";
+                } else {
+                    return new Location("Tier:" + tier_id.getValue(),
+                            "Segment:" + annotation_segment.getAttributeValue("ANNOTATION_ID="));
+                }
             }
             Attribute start_ref = annotation_segment.getAttribute("TIME_SLOT_REF1");
             Attribute end_ref = annotation_segment.getAttribute("TIME_SLOT_REF2");
             assert start_ref != null : "Start ref is null";
             assert end_ref != null : "End ref is null";
             Attribute start_time =
-                    (Attribute) XPath.newInstance(String.format("//TIME_SLOT[@TIME_SLOT_ID=\"%s\"]/@TIME_VALUE",
-                                    start_ref.getValue()))
-                            .selectSingleNode(getJdom());
+                    new XPathBuilder<>( String.format("//TIME_SLOT[@TIME_SLOT_ID=\"%s\"]/@TIME_VALUE",
+                            start_ref.getValue()), Filters.attribute()).compileWith(xpathFactory).evaluateFirst(getJdom());
             assert start_time != null : "Start time is null";
             Attribute end_time =
-                    (Attribute) XPath.newInstance(String.format("//TIME_SLOT[@TIME_SLOT_ID=\"%s\"]/@TIME_VALUE",
-                                    end_ref.getValue()))
-                            .selectSingleNode(getJdom());
+                    new XPathBuilder<>( String.format("//TIME_SLOT[@TIME_SLOT_ID=\"%s\"]/@TIME_VALUE",
+                            end_ref.getValue()), Filters.attribute()).compileWith(xpathFactory).evaluateFirst(getJdom());
             assert end_time != null : "End time is null";
-            return new Location("Tier:" + tier_id.getValue() + "",
+            return new Location("Tier:" + tier_id.getValue(),
                     "Segment:" + annotation_id + ", Time:" +
                             DurationFormatUtils.formatDuration(start_time.getIntValue(), "mm:ss.SSSS") + "-" +
                             DurationFormatUtils.formatDuration(end_time.getIntValue(), "mm:ss.SSSS"));
